# Pong-SDL2

./: CMakeLists.txt  README.md
.cache/clangd/index/: Ball.h.3F16EE954EA3EA41.idx  Engine.cpp.03933AA5776CA470.idx  Engine.h.8E972B2DBDFFB10C.idx  Game.h.ABA35330B92A591D.idx  Player.h.89AC3AA066A33B58.idx  PlayerAI.h.D07079480A2C9BBC.idx  main.cpp.101DF62E6A4A6EE9.idx
dependencies/glad/: glad.h
dependencies/glad/src/: glad.c
src/: Ball.h  Engine.cpp  Engine.h  Game.h  Player.h  PlayerAI.h  main.cpp
